kubernetes/client-pod.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: alpine
#   namespace: final-proj-1
# spec:
#   containers:
#   - image: alpine:3.2
#     command:
#       - /bin/sh
#       - "-c"
#       - "sleep 60m"
#     imagePullPolicy: IfNotPresent
#     name: alpine
#   restartPolicy: Always

apiVersion: v1
kind: Pod
metadata:
  name: client-pod
spec:
  containers:
  - name: client-pod
    image: alpine
    command: ["/bin/sh"]
    tty: true
